# Legacy_server

./: .gitignore  .gitmodules  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
docker-images/main/: Dockerfile
docker-images/surrealdb/: Dockerfile  Dockerfile.Debug  Dockerfile.Mock  README.md
services/logs/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.Debug  build.rs
services/logs/benches/: benchmark.rs
services/logs/src/: actix_config.rs  db_config.rs  error.rs  grpc_config.rs  lib.rs  main.rs
services/logs/src/api/: mod.rs
services/logs/src/api/changelogs/: controller.rs  requests_types.rs  response_types.rs  scope.rs  service.rs
services/logs/src/grpc/: mod.rs  models.rs  server.rs
services/logs/src/grpc/changelogs/: client.rs  generated.rs
services/logs/src/migrations/: changelogs.sql
services/logs/src/model/: changelogs.rs  mod.rs  user.rs
services/logs/src/model/db/: changelogs.rs
services/logs/src/openapi/: mod.rs
services/logs/src/pool/: deadpool_surdb.rs  mod.rs
services/logs/src/repositories/: changelogs.rs  mod.rs  utils.rs
services/logs/src/sql/cl/: change_exist.sql  create.sql
services/logs/src/sql/tests/: clear_cl.sql  cls.sql
services/logs/src/test_env/: config.rs  mod.rs  pool.rs
services/logs/src/utils/: for_tests.rs  mod.rs  parse_lang.rs  token.rs
services/main/: .editorconfig  .gitignore  SasavnServer.sln  launchSettings.json
services/main/SasavnServer/: .dockerignore  .gitignore  CorsMiddleware.cs  Cryptography.cs  Program.cs  SasavnServer.csproj  Settings.cs  Startup.cs  (+6 more)
(+44 files in other folders)
