[package]
name = "logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
tonic = "0.10.1" # Rust gRPC implementation
prost = "0.12.1" # Rust Protocol Buffers implementation
prost-types = "0.12.1" # Contains definitions of Protocol Buffers well-known types
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
env_logger = "0.10.0"
surrealdb = "1.0.0"
serde = "1.0.188"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = "0.4"
rand = "0.8.5"
deadpool-redis = { version = "0.13.0", features = ["serde"] }
actix-web = "4.4.0"
deadpool = { version = "0.10.0", features = ["managed"] }
actix-multipart = "0.6"
async-trait = "0.1.74"
thiserror = "1.0.50"
anyhow = "1.0.75"
utoipa = { version = "4.0.0", features = ["actix_extras", "yaml"] }
regex = "1.10.2"
futures-util = "0.3.28"
jsonwebtoken = "9.1.0"
redis = { version = "0.23.3", features = ["tokio-comp", "json"] }
derive_more = "0.99.17"
serial_test = "2.0.0"
tokio-test = "0.4.3"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
simd-json = "0.13.4"

[build-dependencies]
tonic-build = "0.10.2"

[[bench]]
name = "benchmark"
harness = false


